Resolves: link text is almost invisible in dark theme

--- a/style-notes/notes.css
+++ b/style-notes/notes.css
@@ -174,3 +174,7 @@ p {
   align-content: center;
   justify-self: center;
 }
+
+#info a {
+  color: var(--font-color);
+}
